# coursework_5

./: .pylintrc  constants.py  decorator.py  logger.py  pyproject.toml  run.py
data/: equipment.json  skill.json  unit_description.json
modules/battleground/: battleground.py
modules/equipment/: __init__.py  equip_classes.py  equip_interface.py
modules/player/: __init__.py  player_base.py  player_type.py
modules/skill/: __init__.py  skill.py
modules/unit_class/: __init__.py  unit_class.py
templates/: fight.html
wsgi/: config.py  flask_app.py
wsgi/blueprints/: fight_blueprint.py  hero_choosing.py  index_blueprint.py
